# smart-search-gallery

./: .env_example  .gitignore  LICENSE  README.md  pyproject.toml
src/config/: config.json  logging_config.py
src/matching/: algorithms.py  clip_matcher.py
src/pipeline/: search_pipeline.py
src/server/: model_server.py
src/ui/: gradio_app.py
src/verification/: paligemma_client.py
src/video/: embedder.py
